@@ -90,4 +90,5 @@
       </object>
     </object>
   </object>
+  <support name="custom.exported_support"/>
 </topology>
