@@ -339,4 +339,5 @@
       </object>
     </object>
   </object>
+  <support name="custom.exported_support"/>
 </topology>
