@@ -48,4 +48,5 @@
       </object>
     </object>
   </object>
+  <support name="custom.exported_support"/>
 </topology>
