@@ -152,4 +152,5 @@
       </object>
     </object>
   </object>
+  <support name="custom.exported_support"/>
 </topology>
