@@ -116,4 +116,5 @@
     <u64values length="30">16 22 16 22 10 16 22 16 16 22 </u64values>
     <u64values length="12">22 16 16 10 </u64values>
   </distances2hetero>
+  <support name="custom.exported_support"/>
 </topology>
