@@ -102,4 +102,5 @@
       </object>
     </object>
   </object>
+  <support name="custom.exported_support"/>
 </topology>
