@@ -102,6 +102,7 @@ Package:1 Core:2 [NUMANode(memory=1073741824)] L2Cache:2(size=4194304) PU:2
   <support name="discovery.pu"/>
   <support name="discovery.numa"/>
   <support name="discovery.numa_memory"/>
+  <support name="custom.exported_support"/>
 </topology>
 ** Restrict flag cpuless...
 Machine (1024MB total)
